--- a/altsplash.html
+++ b/altsplash.html
@@ -6,7 +6,7 @@
     
     <link rel="stylesheet" type="text/css" href="CSS/MOMA_Style.css">
     <link rel="icon" href="Images/Assets/Favicon.png">
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <title>MOMA*</title>
 <style>
     html { 
