--- a/home.html
+++ b/home.html
@@ -151,7 +151,7 @@
   <a href="javascript:void(0)" class="closebtn" onclick="closeArts()"><img src= "Images/Assets/closebtn.png" width="50%" ></a>
   <div class="overlay-content" >
     <h1><img src="Images/Gallery/IMG_0365.JPG" width = "75%"></h1>
-      <p><font size="+2">Team Rex</font></p>
+      <p><b>Team Rex</b></p>
       
       <p1><p><b>"ART"</b><br>
     Danni Brando: Harambe's Creation of Adam, The Tower of Fla-Pisa, Water Lilies and Magikarp, Still Life with Pug Loaf, Self Portrait? Not Sure., Olympic Viking, Doges Playing Poker, Nyan Cat Pop-tARt.<br><br>
