Sponge Description Edit

--- a/home.html
+++ b/home.html
@@ -39,7 +39,7 @@
   <a href="javascript:void(0)" class="closebtn" onclick="closeGal3()"><img src= "Images/Assets/closebtn.png" width="50%" ></a>
   <div class="overlay-content" >
     <h1><img src="Images/Gallery/The_Sponge.jpg" width="50%"></h1>  
-      <p><i>The Sponge</i><br><br>Parody of Edvard Munch's <i>The Scream</i> and the <q>Primitive Spongebob</q> meme.<br><br>Primitive Spongebob is a character from Nickelodeon's <i>Spongebob Squarepants</i> who was featured in the episode <q>SB-129.</q><br> A still from this episode, which shows the character in an alert/surprised expression, had become popular across social media outlets as a reaction image macro used to visually express situations of varying surprise and startling.<br></p>  
+      <p><i>The Sponge</i><br><br>Parody of Edvard Munch's <i>The Scream</i> and the <q>Primitive Spongebob</q> meme.<br><br>Primitive Spongebob is a character from Nickelodeon's <i>Spongebob Squarepants</i> who was featured in the episode <q>SB-129.</q><br> A still from this episode, which shows the character in an alert/surprised expression, had become popular across social media outlets<br> as a reaction image macro used to visually express situations of varying surprise and startling.<br></p>  
   </div>
 </div> 
 <div id="gallery4" class="overlay">
